--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       </div>
     </div>
   </div>
+  
 
-    <script async src="js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
