--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MiniGame_on_JS</title>
 </head>
 <body>
-    
+
 
   <div class="app">
     <div class="app__header">
@@ -27,8 +27,9 @@
       </div>
     </div>
   </div>
-  
 
-    <script src="js/index.js"></script>
+
+<!--    <script async src="js/index.js"></script>-->
+    <script async src="js/OOP_ES6/index_es6.js"></script>
 </body>
 </html>
