change link at script

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </div>
 
 
-<!--    <script async src="js/index.js"></script>-->
-    <script async src="js/OOP_ES6/index_es6.js"></script>
+    <script async src="js/index.js"></script>
+<!--    <script async src="js/OOP_ES6/index_es6.js"></script>-->
 </body>
 </html>
